--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,19 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-integration</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.integration</groupId>-->
+<!--            <artifactId>spring-integration-mqtt</artifactId>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>cn.xyliang</groupId>
+            <artifactId>integration-mqtt-starter</artifactId>
+            <version>0.0.2</version>
+        </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
@@ -80,6 +93,11 @@
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
             <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.68</version>
         </dependency>
 
     </dependencies>
